syntax= "proto3";
import "google/protobuf/timestamp.proto";
option java_package = "com.stackroute.musicmantra.booking";
service BookingMethods
{

    rpc getBooking(getBookingReq)returns(getBookingResp);


}
 message getBookingReq
 {

        uint64 studentid =1;
        uint64 sessionid=2;
 }

 message getBookingResp
 {

   uint64 bookingid=1;
   uint64 studentid =2;
   uint64 sessionid=3;
   string status=4;
   google.protobuf.Timestamp bookingdatetime = 5;
 }



